changed menu list

--- a/new.html
+++ b/new.html
@@ -27,7 +27,7 @@
         <a class="nav-link" href="#">ABOUT US</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">MENU</a>
+        <a class="nav-link" href="#">FOOD </a>
       </li>
       <li class="nav-item">
         <a class="nav-link" href="#">OFFERS</a>
