--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head> 
 <title>Restaurent Website</title>
-<link rel="stylesheet" href="style1.css">
+<link rel="stylesheet" href="style.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>
@@ -122,6 +122,7 @@
         	<div class="progress-bar" style="width: 50%;">50%</div>
 </div>
 </div>
+
 <section id="services">
 	<div class="conatiner">
 	<h1>Our Services</h1>
@@ -129,9 +130,25 @@
 		<div class="col-md-3 text-center">
 		<div class="icon">
 			<i class="fa fa-glass" aria-hidden="true"></i>
+    </div>
+    <h3>Drinks</h3>
+    <p>Cranberry Mojito (A festive drink that's perfect for the holidays — or any time, really!) , Blackberry Mojito (The perfect grown-up way to incorporate your favorite summer fruit!) , Passion Fruit Mojito (This tropical mojito will have you believing you're sitting on the beach instead of sitting at home!).</p>
+
 </div>
+<div class="col-md-3 text-center">
+    <div class="icon">
+      <i class="fa fa-cutlery" aria-hidden="true"></i>
+    </div>
+    <h3>Burgers</h3>
+    <p>Veg-Burgers,chicken burgers,Bacon Burgers,Green-Chile Burgers with Fried Eggs. All the burgers we sell are customised</p>
 
-
-
+</div>
+<div class="col-md-3 text-center">
+    <div class="icon">
+      <i class="fa fa-birthday-cake" aria-hidden="true"></i>
+    </div>
+    <h3>Sandwitches</h3>
+    <p>Cheese Sandwiches,Chicken Sandwiches,Tuna Sandwiches,Grilled Cheese Sandwiches,Beef Sandwiches.</p>
+</div>
 </body>
 </html>
