--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 </div>
 
 <section id="services">
-	<div class="conatiner">
+	<div class="container">
 	<h1>Our Services</h1>
 	<div class="row services">
 		<div class="col-md-3 text-center">
@@ -149,6 +149,55 @@
     </div>
     <h3>Sandwitches</h3>
     <p>Cheese Sandwiches,Chicken Sandwiches,Tuna Sandwiches,Grilled Cheese Sandwiches,Beef Sandwiches.</p>
+
+</div>
+</div>
+</div>
+</section>
+<!------------------------Team Members------->
+<section id="team">
+  <div class="container">
+    <h1>Our Team</h1>
+<div class="row">
+  <div class="col-md-3 profile-pic text-center">
+  <div class="images-box">
+    <img src="images/team.jpg" class="img-responsive" width="80%">
+    <ul>
+      <a href="https://www.facebook.com/himani.mukherjee.7"><li><i class="fa fa-facebook"></i></li></a>
+      <a href="#"><li><i class="fa fa-twitter"></i></li></a>
+      <a href="https://www.instagram.com/himanimukherj/"><li><i class="fa fa-instagram"></i></li></a>
+
+</ul>
+</div>
+<h2>Himani Mukharjee</h2>
+<h3> Founder </h3>
+<div class="para">
+<p>Doobys was founded by Himani Mukharjee she had dreamt of being a business women and having brand of her own.So that's how she started making her own sanddwitches,burgers and mojitos.Her love towards the food propelled to open Doobys Inc.Now she is the successfull women in the food industry.</p>
+</div>
+</div>
+<div class="col-md-3 profile-pic text-center">
+  <div class="images-box">
+    <img src="images/hdad.jpg" class="img-responsive" width="100%">
+    <ul>
+      <a href="#"><li><i class="fa fa-pinterest"></i></li></a>
+      <a href="#"><li><i class="fa fa-twitter"></i></li></a>
+      <a href="#"><li><i class="fa fa-linkedin"></i></li></a>
+
+</ul>
+<h2>Mukharjee </h2>
+<h3> Business Head</h3>
+<div class ="para">
+  <p>Mr.Mukharjee is a fitness freak from his early age and he is passionate about investing in food busines.Initially when he is building muscles he focused on proper diet and thats how he build his body. Now, his goal is to help others feel as good as he does thats is the reason he invested in doobys.Inc!.</p>
+</div>
+
+
+
+
+</div>
+</div>
+</section>
+</div>
+</div>
 </div>
 </body>
 </html>
