--- a/index.html
+++ b/index.html
@@ -189,15 +189,15 @@
 <div class ="para">
   <p>Mr.Mukharjee is a fitness freak from his early age and he is passionate about investing in food busines.Initially when he is building muscles he focused on proper diet and thats how he build his body. Now, his goal is to help others feel as good as he does thats is the reason he invested in doobys.Inc!.</p>
 </div>
-
-
-
-
 </div>
 </div>
 </section>
-</div>
-</div>
-</div>
+<!-----------Promo------>
+<section id="promo">
+  <div class="containeer">
+    <p> Get Delicious food by ordering online </p>
+    <a href="out.html" class="btn btn-primary">Contact Us</a>
+  </div>
+</section>
 </body>
 </html>
