addeed contact and order online coloum

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 </div>
 
 <!--------About-->
-<section id="about"></section>
+<section id="about">
 <div class="container">
 	<div class="row">
 		<div class="col-md-6">
@@ -122,7 +122,10 @@
         	<div class="progress-bar" style="width: 50%;">50%</div>
 </div>
 </div>
-
+</div>
+</div>
+</section>
+<!------Our services---------------------->
 <section id="services">
 	<div class="container">
 	<h1>Our Services</h1>
@@ -198,6 +201,78 @@
     <p> Get Delicious food by ordering online </p>
     <a href="out.html" class="btn btn-primary">Contact Us</a>
   </div>
+</section>
+
+<!-----------Special Offers------->
+<section id ="price">
+  <div class="container">
+    <h1>Special Offers</h1>
+    <div class="row">
+      <div class="col-md-3">
+      <div class="single-price">
+        <div class="price-head">
+          <h2>EVERY WEDNESSDAY</h2>
+          <p>50% off/ <span>On burgers</span></p>
+        </div>
+        <div class="price-content">
+          <ul>
+            <li>Chicken burger</li>
+            <li>Ham burger</li>
+            <li>Veg burger</li> 
+            <li>cheese burger</li>
+            <li>patty burger</li>
+          </ul>
+        </div>
+        <div class="price-button">
+        <a class="buy-Button btn-primary" href="out.html"> Select plan</a>
+      </div>
+       </div>
+  </div>
+ <div class="col-md-3">
+      <div class="single-price">
+        <div class="price-head">
+          <h2>WEEK-ENDS</h2>
+          <p>get one drink free/ <span>On 1 order</span></p>
+        </div>
+        <div class="price-content" font-size="10 px">
+          <ul>
+            <li>sandwitch + 1 Mojitho</li>
+            <li>burger + 1 soft drink</li>
+            <li>fries + 1 drink</li> 
+            <li>Nuggets + 1 Smoothie</li>
+          </ul>
+        </div>
+        <div class="price-button">
+        <a class="buy-Button btn-primary" href="out.html"> Select plan</a>
+      </div>
+    </div>
+</div>
+    <div class="col-md-3">
+      <div class="single-price">
+        <div class="price-head">
+          <h2>WEEKDAYS</h2>
+          <p>15% off/<span>On order more than 500 rupees</span></p>
+        </div>
+        <div class="price-content" font-size="10 px">
+          <ul>
+            <li>sandwitches</li>
+            <li>burgers</li>
+            <li>fries</li> 
+            <li>Nuggets</li>
+            <li>Drinks</li>
+            <li>Smoothies</li>
+            <li>Potato mash</li>
+            <li>veg wraps</li>
+            <li>non-veg wraps</li>
+          </ul>
+        </div>
+        <div class="price-button">
+        <a class="buy-Button btn-primary" href="out.html">Select plan</a>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 </section>
 </body>
 </html>
